# pareto-tournament

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
memory/: JOURNAL.md
pareto_tournament/: __init__.py  core.py
tests/: test_core.py
