[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareto-tournament"
version = "0.1.0"
description = "Multi-objective agent selection via head-to-head tournament matches and Pareto-frontier sunset."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/pareto-tournament"
Repository = "https://github.com/SuperInstance/pareto-tournament"

[tool.hatch.build.targets.wheel]
packages = ["pareto_tournament"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
